--- a/src/index.css
+++ b/src/index.css
@@ -48,6 +48,9 @@ body {
 #root {
   height: 100vh;
   width: 100%;
+  background-image: url('./img/textures.png');
+  background-color: #8bd1cb;
+  background-blend-mode: screen;
 }
 
 a {
