--- a/src/index.css
+++ b/src/index.css
@@ -56,3 +56,10 @@ body {
 a {
   text-decoration: none;
 }
+
+.container {
+  display: flex;
+  align-items: center;
+  width: 100%;
+  margin: 0 auto;
+}
