--- a/src/components/Start/Start.module.css
+++ b/src/components/Start/Start.module.css
@@ -39,7 +39,7 @@
   background-image: url('../../assets/img/button__line.png');
   width: 30vw;
   height: 15vh;
-  background-position: 3rem 0;
+  background-position: 9rem 1.5rem;
   position: absolute;
   display: inline-block;
   background-repeat: no-repeat;
