--- a/src/styles/layouts.module.css
+++ b/src/styles/layouts.module.css
@@ -4,7 +4,7 @@
     color: black;
     width: 30rem;
     align-items: center;
-    composes: medium from "../../styles/typo.module.css";
+    composes: medium from "./typo.module.css";
     font-size: fontButton;
   }
   
@@ -25,11 +25,35 @@
   
   .button__text::after {
     content: "";
-    background-image: url('../../assets/img/button__line.png');
+    background-image: url('../assets/img/button__line.png');
     width: 30vw;
     height: 15vh;
     background-position: 9rem 1.5rem;
     position: absolute;
     display: inline-block;
     background-repeat: no-repeat;
+  }
+
+  .next__text{
+    display: flex;
+    justify-content: center;
+    color: black;
+    width: 30rem;
+    align-items: center;
+    composes: medium from "./typo.module.css";
+    font-size: fontButton;
+  }
+  
+  .next {
+    display: flex;
+    align-items: center;
+    justify-content: right;
+    width: 30rem;
+    height: 7rem;
+    background-color: geel;
+    border-radius: 50%;
+    font-size: 2rem;
+    margin-top: 4.5rem;
+    z-index: -2;
+    
   }
