--- a/src/components/Land/Land.module.css
+++ b/src/components/Land/Land.module.css
@@ -89,11 +89,7 @@
 }
 
 .vraag{
-  composes: semibold from "../../styles/typo.module.css";
-  font-size: fontTitel;
-  margin-top: spacer1;
-  display: flex;
-  justify-content: center;
+  composes: vraag from "../../styles/layouts.module.css";
 }
 
 .next{
