--- a/src/components/Record/Record.module.css
+++ b/src/components/Record/Record.module.css
@@ -126,3 +126,10 @@
     background-repeat: no-repeat;
 }
   
+.vraag{
+  composes: semibold from "../../styles/typo.module.css";
+  font-size: fontTitel;
+  margin-top: spacer1;
+  display: flex;
+  justify-content: center;
+}
