--- a/src/components/Land/Land.module.css
+++ b/src/components/Land/Land.module.css
@@ -117,4 +117,12 @@
     display: inline-block;
     background-repeat: no-repeat;
 }
+
+.vraag{
+  composes: semibold from "../../styles/typo.module.css";
+  font-size: fontTitel;
+  margin-top: spacer1;
+  display: flex;
+  justify-content: center;
+}
   
