--- a/src/components/Start/Start.module.css
+++ b/src/components/Start/Start.module.css
@@ -9,6 +9,7 @@
 .player {
   width: 145rem
 }
+
 .button__text{
   display: flex;
   justify-content: center;
@@ -39,7 +40,7 @@
   background-image: url('../../assets/img/button__line.png');
   width: 30vw;
   height: 15vh;
-  background-position: 9rem 1.5rem;
+  background-position: 3rem 0;
   position: absolute;
   display: inline-block;
   background-repeat: no-repeat;
