--- a/src/components/Land/Land.module.css
+++ b/src/components/Land/Land.module.css
@@ -2,6 +2,7 @@
 @value tokens: "../../styles/tokens.module.css";
 @value fontTitel, spacer1 from tokens;
 
+
 .procesbar {
   display: flex;
   align-items: center;
@@ -97,6 +98,8 @@
   composes: next from "../../styles/layouts.module.css";
   border: none;
   color: grey;
+  display: flex;
+  margin: 6rem 0 0rem 100rem;
 }
 
 .next__text {
@@ -119,6 +122,7 @@
   composes: back from "../../styles/layouts.module.css";
   border: none;
   color: grey;
+  z-index: 100;
 }
 
 .back__text {
@@ -146,5 +150,7 @@
 
 .header{
   display: flex;
+  justify-content: space-between;
+  margin-right: 21rem;
 }
   
