--- a/src/components/Opnemen/Opnemen.module.css
+++ b/src/components/Opnemen/Opnemen.module.css
@@ -1,6 +1,6 @@
 
 @value tokens: "../../styles/tokens.module.css";
-@value fontTitel, fontSubtitel spacer1 from tokens;
+@value fontTitel, fontSubtitel, spacer1 from tokens;
 
 .procesbar {
   display: flex;
@@ -126,13 +126,14 @@
   position: relative;
   margin-bottom: 10rem;
   cursor: pointer;
-  font-size: fontSubtitet;
+  font-size: fontSubtitel;
 }
 
-.keuze__text {
-  position: absolute;
-  top: 0;
-  left: 2rem;
+.keuze__text1 {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
   height: 32.8rem;
   width: 42rem;
   border-radius: 5rem;
@@ -142,6 +143,37 @@
   font-size: 3rem;
 }
 
+.keuze__text2 {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 32.8rem;
+  width: 42rem;
+  border-radius: 5rem;
+  background-color: white;
+  box-shadow: 7px 7px 4px rgba(0, 0, 0, 0.25);
+  composes: medium from "../../styles/typo.module.css";
+  font-size: 3rem;
+}
+
+.keuze__text1::before{
+  content: "";
+  background-image: url('../../assets/img/podcast.png');
+  width: 10.2rem;
+  height: 11.6rem;
+  margin-bottom: 2rem;
+}
+
+.keuze__text2::before{
+  content: "";
+  background-image: url('../../assets/img/video.png');
+  width: 12.8rem;
+  height: 8.9rem;
+  margin-bottom: 2rem;
+}
+
+
 .keuze .keuze__mogelijkheid {
   position: absolute;
   opacity: 0;
@@ -150,22 +182,33 @@
   width: 0;
 }
 
-.keuze .keuze__mogelijkheid:checked ~ .keuze__text:after {
+.keuze .keuze__mogelijkheid:checked ~ .keuze__text1:after {
   display: block;
 }
 
-.keuze:hover input ~ .keuze__text {
+.keuze .keuze__mogelijkheid:checked ~ .keuze__text2:after {
+  display: block;
+}
+
+.keuze:hover input ~ .keuze__text1 {
+  border: 10px solid #FFDC61;
+}
+.keuze:hover input ~ .keuze__text2 {
   border: 10px solid #FFDC61;
 }
 
-.keuze input:checked ~ .keuze__text {
+.keuze input:checked ~ .keuze__text1 {
+  border: 10px solid #FFDC61;
+}
+
+.keuze input:checked ~ .keuze__text2 {
   border: 10px solid #FFDC61;
 }
 
 .grid {
   display: grid;
   grid-template-columns: 50% 50%;
-  margin: 10rem auto 30rem;
+  margin: 10rem auto 10rem;
 }
 
 
