--- a/src/components/Record/Record.module.css
+++ b/src/components/Record/Record.module.css
@@ -1,10 +1,11 @@
 .video {
-  min-height: 66rem;
   border-radius: 40rem;
 }
 
+
 .container {
   height: 70rem;
+  border-radius: 40rem;
 }
 
 
@@ -40,15 +41,14 @@
   text-transform: uppercase;
 }
 
+
 .item__number{
   font-family: 'luna';
   margin-bottom: 1.5rem;
-
 }
 
 .procesbar_lijn1{
   display: flex;
-
 }
 
 .procesbar_lijn1::after {
@@ -104,11 +104,12 @@
   display: flex;
   justify-content: center;
 }
-
 .next{
   composes: next from "../../styles/layouts.module.css";
   border: none;
   color: grey;
+  display: flex;
+  margin: 7.7rem 0 0rem 100rem;
 }
 
 .next__text {
@@ -121,7 +122,29 @@
     background-image: url('../../assets/img/button__line.png');
     width: 30vw;
     height: 15vh;
-    background-position: 9rem 1.5rem;
+    background-position: 13rem 1.5rem;
+    position: absolute;
+    display: inline-block;
+    background-repeat: no-repeat;
+}
+
+.back{
+  composes: back from "../../styles/layouts.module.css";
+  border: none;
+  color: grey;
+  z-index: 100;
+}
+
+.back__text {
+  composes: back__text from "../../styles/layouts.module.css";
+}
+
+.back__text::after {
+    content: "";
+    background-image: url('../../assets/img/button__circle.png');
+    width: 15vw;
+    height: 15vh;
+    background-position: 11rem 3.5rem;
     position: absolute;
     display: inline-block;
     background-repeat: no-repeat;
@@ -133,4 +156,10 @@
   margin-top: spacer1;
   display: flex;
   justify-content: center;
+}
+
+.header{
+  display: flex;
+  justify-content: space-between;
+  margin-right: 21rem;
 }
