--- a/src/components/Souvenir/Souvenir.module.css
+++ b/src/components/Souvenir/Souvenir.module.css
@@ -87,18 +87,12 @@
   display: none;
 }
 
-.vraag{
-  composes: semibold from "../../styles/typo.module.css";
-  font-size: fontTitel;
-  margin-top: spacer1;
-  display: flex;
-  justify-content: center;
-}
-
 .next{
   composes: next from "../../styles/layouts.module.css";
   border: none;
   color: grey;
+  display: flex;
+  margin: 7.7rem 0 0rem 100rem;
 }
 
 .next__text {
@@ -111,7 +105,19 @@
     background-image: url('../../assets/img/button__line.png');
     width: 30vw;
     height: 15vh;
-    background-position: 9rem 1.5rem;
+    background-position: 13rem 1.5rem;
+    position: absolute;
+    display: inline-block;
+    background-repeat: no-repeat;
+}
+
+
+.next__text::after {
+    content: "";
+    background-image: url('../../assets/img/button__line.png');
+    width: 30vw;
+    height: 15vh;
+    background-position: 13rem 1.5rem;
     position: absolute;
     display: inline-block;
     background-repeat: no-repeat;
@@ -123,4 +129,128 @@
   margin-top: spacer1;
   display: flex;
   justify-content: center;
+}
+
+.keuze {
+  display: flex;
+  justify-content: center;
+  position: relative;
+  margin-bottom: 10rem;
+  cursor: pointer;
+  font-size: fontSubtitel;
+}
+
+.keuze__sleutel {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 32.8rem;
+  width: 42rem;
+  border-radius: 5rem;
+  background-color: white;
+  box-shadow: 7px 7px 4px rgba(0, 0, 0, 0.25);
+  composes: medium from "../../styles/typo.module.css";
+  font-size: 3rem;
+}
+
+.keuze__magneet {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 32.8rem;
+  width: 42rem;
+  border-radius: 5rem;
+  background-color: white;
+  box-shadow: 7px 7px 4px rgba(0, 0, 0, 0.25);
+  composes: medium from "../../styles/typo.module.css";
+  font-size: 3rem;
+}
+
+.keuze__sticker {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 32.8rem;
+  width: 42rem;
+  border-radius: 5rem;
+  background-color: white;
+  box-shadow: 7px 7px 4px rgba(0, 0, 0, 0.25);
+  composes: medium from "../../styles/typo.module.css";
+  font-size: 3rem;
+}
+
+.keuze__magneet::before{
+  content: "";
+  background-image: url('../../assets/img/podcast.png');
+  width: 10.2rem;
+  height: 11.6rem;
+  margin-bottom: 2rem;
+}
+
+.keuze__sleutel::before{
+  content: "";
+  background-image: url('../../assets/img/video.png');
+  width: 12.8rem;
+  height: 8.9rem;
+  margin-bottom: 2rem;
+}
+
+.keuze__sticker::before{
+  content: "";
+  background-image: url('../../assets/img/video.png');
+  width: 12.8rem;
+  height: 8.9rem;
+  margin-bottom: 2rem;
+}
+
+.keuze .keuze__mogelijkheid {
+  position: absolute;
+  opacity: 0;
+  cursor: pointer;
+  height: 0;
+  width: 0;
+}
+
+.keuze .keuze_mogelijkheid:checked ~ .keuze_magneet:after {
+  display: block;
+}
+
+.keuze .keuze_mogelijkheid:checked ~ .keuze_sleutel:after {
+  display: block;
+}
+
+.keuze .keuze_mogelijkheid:checked ~ .keuze_sticker:after {
+  display: block;
+}
+
+.keuze:hover input ~ .keuze__magneet {
+  border: 10px solid #FFDC61;
+}
+.keuze:hover input ~ .keuze__sleutel {
+  border: 10px solid #FFDC61;
+}
+
+.keuze:hover input ~ .keuze__sticker {
+  border: 10px solid #FFDC61;
+}
+
+.keuze input:checked ~ .keuze__magneet {
+  border: 10px solid #FFDC61;
+}
+
+.keuze input:checked ~ .keuze__sleutel {
+  border: 10px solid #FFDC61;
+}
+
+.keuze input:checked ~ .keuze__sticker {
+  border: 10px solid #FFDC61;
+}
+
+.grid {
+  display: grid;
+  grid-template-columns: 33% 33% 33%;
+  margin: 10rem auto 10rem;
 }
