--- a/src/components/Record/Record.module.css
+++ b/src/components/Record/Record.module.css
@@ -1,18 +1,26 @@
 .video {
-  border-radius: 40rem;
   width: 70rem;
-  height: 30rem;
+  height: 60rem; 
 }
-
 
 .container__video {
   height: 60.1rem;
   width: 130rem;
   margin-top: 5rem;
   margin: 0 auto;
-  padding: 0 10rem;
+  padding: 10rem 10rem 0;
 }
 
+.video__content {
+  display: flex;
+}
+
+.content__palmboom {
+  margin-left: -41rem;
+  margin-top: -13rem;
+  width: 50.7rem;
+  height: 85.4rem;
+}
 
 @value tokens: "../../styles/tokens.module.css";
 @value fontTitel, spacer1 from tokens;
@@ -23,6 +31,7 @@
   height: 10rem;
   justify-content: center;
   margin-bottom: 10rem;
+  width: 126rem;
 }
 
 .procesbar__item{
@@ -115,7 +124,7 @@
   border: none;
   color: grey;
   display: flex;
-  margin: 7.7rem 0 0rem 100rem;
+  margin: 3.2rem 0 0rem 90rem;
 }
 
 .next__text {
@@ -166,6 +175,6 @@
 
 .header{
   display: flex;
-  justify-content: space-between;
-  margin-right: 21rem;
+  justify-content: space-around;
+  width: 126rem;
 }
