--- a/src/components/Pimp/Pimp.module.css
+++ b/src/components/Pimp/Pimp.module.css
@@ -128,6 +128,7 @@
   composes: next from "../../styles/layouts.module.css";
   border: none;
   color: grey;
+  margin: -3rem 0 0rem 108.5rem;
 }
 
 .next__text {
