--- a/src/components/Record/Record.module.css
+++ b/src/components/Record/Record.module.css
@@ -188,3 +188,51 @@
   justify-content: space-around;
   width: 126rem;
 }
+
+.content_sound {
+  margin-top: -65rem;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+}
+
+.sound {
+  border-radius: 5rem;
+  margin-bottom: 2rem;
+}
+
+.start {
+  background-image: url('../../assets/img/start.png');
+  margin: 0 auto;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 7.8rem;
+    height: 7.8rem;
+    background-color: geel;
+    border-radius: 50%;
+    font-size: 2rem;
+    margin-top: 4.5rem;
+    z-index: -2;
+    border: none;
+}
+
+.stop {
+  background-image: url('../../assets/img/stop.png');
+  margin: 0 auto;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 7.8rem;
+    height: 7.8rem;
+    background-color: geel;
+    border-radius: 50%;
+    font-size: 2rem;
+    margin-top: 2rem;
+    z-index: -2;
+    border: none;
+    margin-bottom: 2rem;
+}
+
+
