delen pagina bijna af

--- a/src/components/Delen/Delen.module.css
+++ b/src/components/Delen/Delen.module.css
@@ -129,9 +129,137 @@
 .subtitel {
   composes: medium from "../../styles/typo.module.css";
   font-size: 3rem;
-  margin-top: 1rem;
+  margin: 3rem auto 0;
   display: flex;
   justify-content: center;
+  width: 55rem;
+  text-align: center;
+  justify-content: center;
+}
 
+.keuze {
+  display: flex;
+  justify-content: center;
+  position: relative;
+  margin-bottom: 10rem;
+  cursor: pointer;
+  font-size: fontSubtitel;
+}
+
+.keuze__text1 {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 27.8rem;
+  width: 37rem;
+  border-radius: 5rem;
+  background-color: white;
+  box-shadow: 7px 7px 4px rgba(0, 0, 0, 0.25);
+  composes: medium from "../../styles/typo.module.css";
+  font-size: 2.5rem;
+}
+
+.keuze__text2 {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  height: 27.8rem;
+  width: 37rem;
+  border-radius: 5rem;
+  background-color: white;
+  box-shadow: 7px 7px 4px rgba(0, 0, 0, 0.25);
+  composes: medium from "../../styles/typo.module.css";
+  font-size: 2.5rem;
+}
+
+.keuze__text1::before{
+  content: "";
+  background-image: url('../../assets/img/kruis.png');
+  background-repeat: no-repeat;
+  width: 8.3rem;
+  height: 9.1rem;
+  margin-bottom: 2rem;
+}
+
+.keuze__text2::before{
+  content: "";
+  background-image: url('../../assets/img/vink.png');
+  background-repeat: no-repeat;
+  width: 13rem;
+  height: 11rem;
+  margin-bottom: 2rem;
+}
+
+.keuze .keuze__mogelijkheid {
+  position: absolute;
+  opacity: 0;
+  cursor: pointer;
+  height: 0;
+  width: 0;
+}
+
+.keuze .keuze_mogelijkheid:checked ~ .keuze_text1:after {
+  display: block;
+}
+
+.keuze .keuze_mogelijkheid:checked ~ .keuze_text2:after {
+  display: block;
+}
+
+.keuze:hover input ~ .keuze__text1 {
+  border: 10px solid #FFDC61;
+}
+.keuze:hover input ~ .keuze__text2 {
+  border: 10px solid #FFDC61;
+}
+
+.keuze input:checked ~ .keuze__text1 {
+  border: 10px solid #FFDC61;
+}
+
+.keuze input:checked ~ .keuze__text2 {
+  border: 10px solid #FFDC61;
+}
+
+.grid {
+  display: grid;
+  grid-template-columns: 50% 50%;
+  margin: 10rem auto 10rem;
+  width: 70%;
+}
+
+.next{
+  composes: next from "../../styles/layouts.module.css";
+  border: none;
+  color: grey;
+  display: flex;
+  margin: -3rem 0 0rem 108.5rem;
+}
+
+.next__text {
+  composes: next__text from "../../styles/layouts.module.css";
+}
+
+
+.next__text::after {
+    content: "";
+    background-image: url('../../assets/img/button__line.png');
+    width: 30vw;
+    height: 15vh;
+    background-position: 13rem 1.5rem;
+    position: absolute;
+    display: inline-block;
+    background-repeat: no-repeat;
+}
+
+.next__active {
+  composes: next from "../../styles/layouts.module.css";
+  border: none;
+  background-color:  #FFDC61;
+  display: flex;
+  margin: -3rem 0 0rem 108.5rem;
 }
   
