--- a/src/components/TextInputGroup/TextInputGroup.module.css
+++ b/src/components/TextInputGroup/TextInputGroup.module.css
@@ -3,7 +3,7 @@
 
 .input {
   composes: input from "../../styles/components.module.css";
-  margin-bottom: spacer1;
+  margin-top: 1rem;
 }
 
 .label {
