--- a/src/components/Gegevens/Gegevens.module.css
+++ b/src/components/Gegevens/Gegevens.module.css
@@ -2,6 +2,11 @@
 @value tokens: "../../styles/tokens.module.css";
 @value fontTitel, fontSubtitel, spacer1 from tokens;
 
+.vraag__bold {
+  composes: bold from "../../styles/typo.module.css";
+  margin: 0 1rem;
+}
+
 .procesbar {
   display: flex;
   align-items: center;
@@ -159,6 +164,7 @@
 .input__wrapper{
   display: flex;
   flex-flow: column;
+  margin-top: 6rem;
 }
 
 .input__wrapper label{
