--- a/src/components/Ontvanger/Ontvanger.module.css
+++ b/src/components/Ontvanger/Ontvanger.module.css
@@ -2,10 +2,34 @@
 @value tokens: "../../styles/tokens.module.css";
 @value fontTitel, spacer1 from tokens;
 
+
+.grid label {
+  font-size: fontSubtitel;
+  margin-top: 3rem;
+}
+
+.label{
+  font-size: fontSubtitel;
+  margin-top: 3rem;
+}
+
+.vraag__bold {
+  composes: bold from "../../styles/typo.module.css";
+  margin: 0 1rem;
+}
+
 .procesbar {
   display: flex;
   align-items: center;
   height: 10rem;
+  justify-content: center;
+}
+
+.vraag{
+  composes: semibold from "../../styles/typo.module.css";
+  font-size: fontTitel;
+  margin-top: spacer1;
+  display: flex;
   justify-content: center;
 }
 
@@ -100,6 +124,8 @@
   composes: next from "../../styles/layouts.module.css";
   border: none;
   color: grey;
+  display: flex;
+  margin: -3rem 0 0rem 108.5rem;
 }
 
 .next__text {
@@ -112,18 +138,67 @@
     background-image: url('../../assets/img/button__line.png');
     width: 30vw;
     height: 15vh;
-    background-position: 9rem 1.5rem;
+    background-position: 13rem 1.5rem;
+    position: absolute;
+    display: inline-block;
+    background-repeat: no-repeat;
+}
+
+.next__active {
+  composes: next from "../../styles/layouts.module.css";
+  border: none;
+  background-color:  #FFDC61;
+  display: flex;
+  margin: -3rem 0 0rem 108.5rem;
+}
+
+.back{
+  composes: back from "../../styles/layouts.module.css";
+  border: none;
+  color: grey;
+  z-index: 100;
+}
+
+.back__text {
+  composes: back__text from "../../styles/layouts.module.css";
+}
+
+.header{
+  display: flex;
+  justify-content: space-between;
+  margin-right: 21rem;
+}
+
+.back__text::after {
+    content: "";
+    background-image: url('../../assets/img/button__circle.png');
+    width: 15vw;
+    height: 15vh;
+    background-position: 11rem 3.5rem;
     position: absolute;
     display: inline-block;
     background-repeat: no-repeat;
 }
   
 .grid {
-  display: flex;
-  flex-direction: column;
+  width: 70.1rem;
+  margin: 4rem auto 0;
 }
 
 .wrapper {
   display: flex;
   flex-direction: row;
 }
+
+
+
+.wrapper__item{
+  display: flex;
+  flex-flow: column;
+  width: 100%;
+}
+
+.wrapper__item__postcode{
+  width: 4rem;
+}
+
