--- a/src/components/Land/Land.module.css
+++ b/src/components/Land/Land.module.css
@@ -2,6 +2,9 @@
 @value tokens: "../../styles/tokens.module.css";
 @value fontTitel, spacer1 from tokens;
 
+.error {
+  composes: error from "../../styles/layouts.module.css";
+}
 
 .procesbar {
   display: flex;
